--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="background_image">background image</string>
+    <string name="app_logo">app logo</string>
+    <string name="men">Men</string>
+    <string name="women">Women</string>
+    <string name="co_ed">Co-ed</string>
+
 </resources>
