--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="men">Men</string>
     <string name="women">Women</string>
     <string name="co_ed">Co-ed</string>
+    <string name="finish">FINISH</string>
+    <string name="beginner">Beginner</string>
+    <string name="baller">Baller</string>
+    <string name="i_am_a">I am a:</string>
 
 </resources>
